--- a/memories.html
+++ b/memories.html
@@ -117,19 +117,16 @@
     <a href="when-you-said-you-loved-me.html" class="proceed-button" id="proceedBtn">PROCEED</a>
 
     <script>
-        // --- DATA ---
         const memories = [
             { src: 'a.jpg', caption: 'I love how safe and calm you feel with me' }, { src: 'b.jpg', caption: 'Church Street date, walking the road and taking photobooth pictures' }, { src: 'c.jpg', caption: 'You wearing my Liverpool jersey, me wearing one that you got me' }, { src: 'd.jpg', caption: 'One of our many Burger KIng escapades' }, { src: 'e.jpg', caption: 'One of my favourite nights with you ever' }, { src: 'f.jpg', caption: 'Delhi Dhaba post classes date' }, { src: 'g.jpg', caption: 'Just holding my world while sleeping :)' }, { src: 'h.jpg', caption: 'Bacchus date! You looked so hot my god' }, { src: 'i.jpg', caption: 'Annual Day - we went shopping for my shirt that same morning' }, { src: 'j.jpg', caption: 'My last time seeing you perform competitively :")' }, { src: 'k.jpg', caption: 'Our safe place, my home' }, { src: 'l.jpg', caption: 'Two goofs so in love with each other' }, { src: 'm.jpg', caption: 'New jersey shoot day' }, { src: 'n.jpg', caption: 'Back to Manipal lake, chasing our one and only sunrise' }, { src: 'o.jpg', caption: 'Me with my trophy' }, { src: 'p.jpg', caption: 'Just one of those pictures that make me smile' }, { src: 'q.jpg', caption: 'The first time you dressed up in front of me' }, { src: 'r.jpg', caption: 'To be your bangle delivery guy now and forever' }, { src: 's.jpg', caption: 'Soft Launch day' }, { src: 't.jpg', caption: 'Adulting day, getting documents and Aadhar and going to the bank' }, { src: 'u.jpg', caption: 'The morning after your first night over' }, { src: 'v.jpg', caption: 'Before "us" existed' }, { src: 'w.jpg', caption: 'Our first evening after knowing about each other' }
         ];
 
-        // --- DOM ELEMENTS ---
         let currentPhotoTop = 100;
         let buttonShown = false;
         const proceedBtn = document.getElementById('proceedBtn');
         const backgroundMusic = document.getElementById('background-music');
         let musicHasStarted = false;
 
-        // --- FUNCTIONS ---
         function createPhotoElement() {
             const memory = memories[Math.floor(Math.random() * memories.length)];
             const wrapper = document.createElement('div');
@@ -147,7 +144,8 @@
             const size = Math.random() * 100 + 150;
             wrapper.style.width = size + 'px';
             wrapper.style.left = Math.random() * (window.innerWidth - size - 20) + 'px';
-            wrapper.style.top = currentPhotoTop + (Math.random() * 200) + 'px';
+            // THIS IS THE CORRECTED LINE FOR BETTER SPREAD
+            wrapper.style.top = currentPhotoTop + (Math.random() * 350) + 'px';
             wrapper.style.transform = `rotate(${Math.random() * 40 - 20}deg)`;
         }
 
@@ -164,12 +162,11 @@
                 backgroundMusic.play().then(() => {
                     musicHasStarted = true;
                 }).catch(error => {
-                    console.log("Autoplay was prevented by the browser.");
+                    // Autoplay was prevented by the browser.
                 });
             }
         }
 
-        // --- EVENT LISTENERS ---
         window.addEventListener('scroll', () => {
             if (window.innerHeight + window.scrollY >= document.body.offsetHeight - 200) {
                 addMorePhotos();
@@ -184,10 +181,9 @@
         document.addEventListener('DOMContentLoaded', () => {
             document.body.style.height = '2000px'; 
             addMorePhotos(15);
-            attemptToPlayMusic(); // Try to play music on load
+            attemptToPlayMusic();
         });
         
-        // Add a one-time click listener as a fallback for autoplay
         document.body.addEventListener('click', attemptToPlayMusic, { once: true });
 
     </script>
